# rookdocs

./: .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: docker-publish.yml
backend/: Dockerfile  celerybeat-schedule  celerybeat-schedule-shm  celerybeat-schedule-wal  pyproject.toml
backend/app/: celery_app.py  config.py  main.py  tasks.py
backend/app/api/: content.py  repos.py
backend/app/models/: repo.py
backend/app/services/: file_service.py  git_service.py  repo_manager.py
backend/tests/: test_api.py
frontend/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx
frontend/src/lib/: api.ts  markdown-plugins.ts
frontend/src/pages/: Dashboard.tsx  Settings.tsx  Welcome.tsx
repos/: config.json
